AISVII-75 main picture overflowing fixed

--- a/frontend/www/css/layouts/core.css
+++ b/frontend/www/css/layouts/core.css
@@ -2,6 +2,18 @@
     margin-bottom: 15px;
 }
 
+#main-picture img {
+    max-width: 300px;
+    width: 99%;
+}
+
+#main-picture div {
+    background-color: #E9E9E9 !important;
+    border: 1px solid #F5F5F5;
+    border-radius: 2px 2px 2px 2px;
+    box-shadow: 1px 1px 10px 0 #C9C9C9;
+}
+
 #title {
     margin-bottom: 15px;
 }
